--- a/HHA507_Assignment2.ipynb
+++ b/HHA507_Assignment2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrQHbN7f1ncv/HLhL+zotJ",
+      "authorship_tag": "ABX9TyNQt6y9ATabnhbeE3lh0tn4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 29,
       "metadata": {
         "id": "jr-Pu6owsL3y"
       },
@@ -62,9 +62,9 @@
           "height": 565
         },
         "id": "qiZUL1arswEU",
-        "outputId": "1736a10a-8896-4d8e-a708-298e3f15ef9f"
+        "outputId": "ba8ef730-b7f4-4679-f1e8-c6b4e9ae4bc1"
       },
-      "execution_count": 3,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -152,7 +152,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5f44d9d6-05be-440e-8f1d-b541582f0ffc\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-8d2b8b94-cd18-4a0b-8032-ed26a7ab3ce1\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -454,7 +454,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5f44d9d6-05be-440e-8f1d-b541582f0ffc')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8d2b8b94-cd18-4a0b-8032-ed26a7ab3ce1')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -506,12 +506,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5f44d9d6-05be-440e-8f1d-b541582f0ffc button.colab-df-convert');\n",
+              "        document.querySelector('#df-8d2b8b94-cd18-4a0b-8032-ed26a7ab3ce1 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5f44d9d6-05be-440e-8f1d-b541582f0ffc');\n",
+              "        const element = document.querySelector('#df-8d2b8b94-cd18-4a0b-8032-ed26a7ab3ce1');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -531,8 +531,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-0f8068dd-887e-4e20-b807-99e65c1ce53a\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0f8068dd-887e-4e20-b807-99e65c1ce53a')\"\n",
+              "<div id=\"df-01b0da04-5d9e-4900-b877-34a40eac2e80\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-01b0da04-5d9e-4900-b877-34a40eac2e80')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -651,7 +651,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-0f8068dd-887e-4e20-b807-99e65c1ce53a button');\n",
+              "        document.querySelector('#df-01b0da04-5d9e-4900-b877-34a40eac2e80 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -662,7 +662,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 30
         }
       ]
     },
@@ -691,9 +691,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ia7jA_Uwvl7w",
-        "outputId": "771ec2dc-af62-434e-f6dd-94b2d48d3560"
+        "outputId": "cb8d7284-76bc-46f0-9711-3c0c6d406ea6"
       },
-      "execution_count": 4,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -738,9 +738,9 @@
           "height": 773
         },
         "id": "ONGTBo6w3eAI",
-        "outputId": "3a8f0ff6-f48e-4fdc-cff2-15d2b2c972af"
+        "outputId": "080f7a7a-4575-49c1-f966-decddc148c72"
       },
-      "execution_count": 5,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -846,7 +846,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b6aad1d7-e714-467b-84e1-3afb80b7e5f0\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-23525343-bcc8-4ae8-848c-db1a4b796ca6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1148,7 +1148,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b6aad1d7-e714-467b-84e1-3afb80b7e5f0')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-23525343-bcc8-4ae8-848c-db1a4b796ca6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1200,12 +1200,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b6aad1d7-e714-467b-84e1-3afb80b7e5f0 button.colab-df-convert');\n",
+              "        document.querySelector('#df-23525343-bcc8-4ae8-848c-db1a4b796ca6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b6aad1d7-e714-467b-84e1-3afb80b7e5f0');\n",
+              "        const element = document.querySelector('#df-23525343-bcc8-4ae8-848c-db1a4b796ca6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1225,8 +1225,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-0094fc54-bdf9-4f2d-8d40-c1ad2b6c3762\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0094fc54-bdf9-4f2d-8d40-c1ad2b6c3762')\"\n",
+              "<div id=\"df-2cea353c-f847-4b63-bc9c-cee189f90b69\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2cea353c-f847-4b63-bc9c-cee189f90b69')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1345,7 +1345,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-0094fc54-bdf9-4f2d-8d40-c1ad2b6c3762 button');\n",
+              "        document.querySelector('#df-2cea353c-f847-4b63-bc9c-cee189f90b69 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1356,7 +1356,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 32
         }
       ]
     },
@@ -1364,7 +1364,7 @@
       "cell_type": "code",
       "source": [
         "# Remove leading and trailing white space from a column\n",
-        "df.columns = df.columns.str.strip()\n",
+        "df_columns = df.columns.str.strip()\n",
         "df"
       ],
       "metadata": {
@@ -1373,9 +1373,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 565
         },
-        "outputId": "2de7e4d7-b4a4-4874-f082-d8d1daa7a263"
+        "outputId": "75b878b6-a1ee-4130-e4a9-38a673890072"
       },
-      "execution_count": 6,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1463,7 +1463,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9295882c-e9d5-49c3-a13d-934a149fe700\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-fa9d550c-9c78-44a8-a00a-7363459df93d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1765,7 +1765,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9295882c-e9d5-49c3-a13d-934a149fe700')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fa9d550c-9c78-44a8-a00a-7363459df93d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1817,12 +1817,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-9295882c-e9d5-49c3-a13d-934a149fe700 button.colab-df-convert');\n",
+              "        document.querySelector('#df-fa9d550c-9c78-44a8-a00a-7363459df93d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-9295882c-e9d5-49c3-a13d-934a149fe700');\n",
+              "        const element = document.querySelector('#df-fa9d550c-9c78-44a8-a00a-7363459df93d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1842,8 +1842,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-7f13e486-ca7c-4519-85a1-698e6c6fd5ec\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7f13e486-ca7c-4519-85a1-698e6c6fd5ec')\"\n",
+              "<div id=\"df-5d8c0f77-9018-4244-ae51-12a1c0f97bf6\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5d8c0f77-9018-4244-ae51-12a1c0f97bf6')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1962,7 +1962,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-7f13e486-ca7c-4519-85a1-698e6c6fd5ec button');\n",
+              "        document.querySelector('#df-5d8c0f77-9018-4244-ae51-12a1c0f97bf6 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1973,7 +1973,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 33
         }
       ]
     },
@@ -2629,28 +2629,46 @@
       "cell_type": "code",
       "source": [
         "# Check data types of columns\n",
-        "df.columns"
+        "df.dtypes"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 193
+          "base_uri": "https://localhost:8080/"
         },
         "id": "nuXMvA6XccQR",
-        "outputId": "6c616f54-fcdb-407c-e901-ef61b2efb040"
+        "outputId": "3495e48f-e8e3-49d7-a72c-ee07456cf4dc"
       },
-      "execution_count": 22,
+      "execution_count": 35,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-22-a8e87b86c62d>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Check data types of columns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'numpy.dtype[object_]' object has no attribute 'columns'"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Patient Age              object\n",
+              "Gender                   object\n",
+              "City of Residence        object\n",
+              "State of Residence       object\n",
+              "Has Insurance            object\n",
+              "Visited Last Month       object\n",
+              "Payment Method           object\n",
+              "Preferred Doctor         object\n",
+              "Disease Diagnosed        object\n",
+              "Medication Prescribed    object\n",
+              "Type of Appointment      object\n",
+              "Average Heart Rate       object\n",
+              "Average BP               object\n",
+              "Height (in cm)           object\n",
+              "Weight (in kg)           object\n",
+              "Payment Due ($)          object\n",
+              "Last Visit (days ago)    object\n",
+              "Visit Duration (mins)    object\n",
+              "Number of Tests          object\n",
+              "Prescription Cost ($)    object\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
         }
       ]
     }
