--- a/HHA507_Assignment2.ipynb
+++ b/HHA507_Assignment2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQt6y9ATabnhbeE3lh0tn4",
+      "authorship_tag": "ABX9TyP57ckJqVfNr0cSaML34UjO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 65,
       "metadata": {
         "id": "jr-Pu6owsL3y"
       },
@@ -53,7 +53,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv ('Week2.csv')\n",
+        "df = pd.read_csv ('https://raw.githubusercontent.com/hantswilliams/HHA_507_2023/main/WK2/data/healthcare_data_cleaning.csv')\n",
         "df"
       ],
       "metadata": {
@@ -62,9 +62,9 @@
           "height": 565
         },
         "id": "qiZUL1arswEU",
-        "outputId": "ba8ef730-b7f4-4679-f1e8-c6b4e9ae4bc1"
+        "outputId": "4d1621a4-93ef-44eb-e3c4-d3668eb408db"
       },
-      "execution_count": 30,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -152,7 +152,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8d2b8b94-cd18-4a0b-8032-ed26a7ab3ce1\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e888b902-a1f8-4617-a859-2fea31873bb7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -454,7 +454,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8d2b8b94-cd18-4a0b-8032-ed26a7ab3ce1')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e888b902-a1f8-4617-a859-2fea31873bb7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -506,12 +506,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-8d2b8b94-cd18-4a0b-8032-ed26a7ab3ce1 button.colab-df-convert');\n",
+              "        document.querySelector('#df-e888b902-a1f8-4617-a859-2fea31873bb7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-8d2b8b94-cd18-4a0b-8032-ed26a7ab3ce1');\n",
+              "        const element = document.querySelector('#df-e888b902-a1f8-4617-a859-2fea31873bb7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -531,8 +531,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-01b0da04-5d9e-4900-b877-34a40eac2e80\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-01b0da04-5d9e-4900-b877-34a40eac2e80')\"\n",
+              "<div id=\"df-8838c2f7-47e4-49be-a328-a53171e03cc7\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8838c2f7-47e4-49be-a328-a53171e03cc7')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -651,7 +651,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-01b0da04-5d9e-4900-b877-34a40eac2e80 button');\n",
+              "        document.querySelector('#df-8838c2f7-47e4-49be-a328-a53171e03cc7 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -662,7 +662,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 66
         }
       ]
     },
@@ -691,9 +691,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ia7jA_Uwvl7w",
-        "outputId": "cb8d7284-76bc-46f0-9711-3c0c6d406ea6"
+        "outputId": "7b89a775-176e-437c-c953-1dc64fd509de"
       },
-      "execution_count": 31,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
@@ -738,9 +738,9 @@
           "height": 773
         },
         "id": "ONGTBo6w3eAI",
-        "outputId": "080f7a7a-4575-49c1-f966-decddc148c72"
+        "outputId": "abd96564-e707-421b-f60f-eb4c752aedd3"
       },
-      "execution_count": 32,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -846,7 +846,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-23525343-bcc8-4ae8-848c-db1a4b796ca6\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-70a7c26e-1055-4f7f-9cc4-6c76c6c0d35c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1148,7 +1148,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-23525343-bcc8-4ae8-848c-db1a4b796ca6')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-70a7c26e-1055-4f7f-9cc4-6c76c6c0d35c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1200,12 +1200,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-23525343-bcc8-4ae8-848c-db1a4b796ca6 button.colab-df-convert');\n",
+              "        document.querySelector('#df-70a7c26e-1055-4f7f-9cc4-6c76c6c0d35c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-23525343-bcc8-4ae8-848c-db1a4b796ca6');\n",
+              "        const element = document.querySelector('#df-70a7c26e-1055-4f7f-9cc4-6c76c6c0d35c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1225,8 +1225,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-2cea353c-f847-4b63-bc9c-cee189f90b69\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2cea353c-f847-4b63-bc9c-cee189f90b69')\"\n",
+              "<div id=\"df-c840e2dd-4161-4b1f-9451-18f58a13bb74\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c840e2dd-4161-4b1f-9451-18f58a13bb74')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1345,7 +1345,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-2cea353c-f847-4b63-bc9c-cee189f90b69 button');\n",
+              "        document.querySelector('#df-c840e2dd-4161-4b1f-9451-18f58a13bb74 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1356,9 +1356,42 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 69
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.duplicated().values.sum() # Checking if there are any duplicates"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2mbYdBglftw2",
+        "outputId": "d3f864bc-8d92-44bb-f185-48b835f735bc"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "6yrA0R1bftUl"
+      }
     },
     {
       "cell_type": "code",
@@ -1373,9 +1406,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 565
         },
-        "outputId": "75b878b6-a1ee-4130-e4a9-38a673890072"
+        "outputId": "f1b51b35-e058-4376-cffc-45b062a63f45"
       },
-      "execution_count": 33,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1463,7 +1496,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fa9d550c-9c78-44a8-a00a-7363459df93d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9da6ca53-8521-4ed4-97bb-7d5e397de45c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1765,7 +1798,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fa9d550c-9c78-44a8-a00a-7363459df93d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9da6ca53-8521-4ed4-97bb-7d5e397de45c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1817,12 +1850,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-fa9d550c-9c78-44a8-a00a-7363459df93d button.colab-df-convert');\n",
+              "        document.querySelector('#df-9da6ca53-8521-4ed4-97bb-7d5e397de45c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-fa9d550c-9c78-44a8-a00a-7363459df93d');\n",
+              "        const element = document.querySelector('#df-9da6ca53-8521-4ed4-97bb-7d5e397de45c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1842,8 +1875,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-5d8c0f77-9018-4244-ae51-12a1c0f97bf6\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5d8c0f77-9018-4244-ae51-12a1c0f97bf6')\"\n",
+              "<div id=\"df-d3de8981-59ed-4f26-9bcc-4ef4746125ae\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d3de8981-59ed-4f26-9bcc-4ef4746125ae')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1962,7 +1995,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-5d8c0f77-9018-4244-ae51-12a1c0f97bf6 button');\n",
+              "        document.querySelector('#df-d3de8981-59ed-4f26-9bcc-4ef4746125ae button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1973,7 +2006,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 71
         }
       ]
     },
@@ -1998,9 +2031,9 @@
           "height": 582
         },
         "id": "WCyRVZxJXtni",
-        "outputId": "0a609947-00c6-4f02-9b1a-268f320ca679"
+        "outputId": "3dca3921-ef0d-497e-bb66-f7e780dc93f3"
       },
-      "execution_count": 7,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
@@ -2095,7 +2128,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3f336398-4650-42ea-a5f0-d5537431cfc4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-bfea9220-f378-4f47-bf5b-dc25a0ac4d38\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2397,7 +2430,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3f336398-4650-42ea-a5f0-d5537431cfc4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bfea9220-f378-4f47-bf5b-dc25a0ac4d38')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2449,12 +2482,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3f336398-4650-42ea-a5f0-d5537431cfc4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-bfea9220-f378-4f47-bf5b-dc25a0ac4d38 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3f336398-4650-42ea-a5f0-d5537431cfc4');\n",
+              "        const element = document.querySelector('#df-bfea9220-f378-4f47-bf5b-dc25a0ac4d38');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2474,8 +2507,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-69b4abfa-c48a-4b74-89d5-7b7a15bcc73a\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-69b4abfa-c48a-4b74-89d5-7b7a15bcc73a')\"\n",
+              "<div id=\"df-b7af7459-de2a-473d-b68f-96072909a01a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b7af7459-de2a-473d-b68f-96072909a01a')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2594,7 +2627,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-69b4abfa-c48a-4b74-89d5-7b7a15bcc73a button');\n",
+              "        document.querySelector('#df-b7af7459-de2a-473d-b68f-96072909a01a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -2605,7 +2638,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 72
         }
       ]
     },
@@ -2636,9 +2669,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nuXMvA6XccQR",
-        "outputId": "3495e48f-e8e3-49d7-a72c-ee07456cf4dc"
+        "outputId": "9812fc70-3c90-4181-ecdf-b850f4bc59b9"
       },
-      "execution_count": 35,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2668,9 +2701,47 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 73
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['Bp_Status'] = np.where((data['Average BP'] > 120) & (data['Average BP'] < 90 ), 'Above normal', 'Below normal')\n",
+        "data"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 193
+        },
+        "id": "Wjc2zhSvirDG",
+        "outputId": "b8531ad0-1695-482e-eff2-baf0e33d2d35"
+      },
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-86-e28c10d5d146>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Bp_Status'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Average BP'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m120\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Average BP'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m90\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Above normal'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Below normal'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bDEHUj8Lkt37"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
