--- a/HHA507_Assignment2.ipynb
+++ b/HHA507_Assignment2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+x6lE5rSwCwDBb2xbCRlm",
+      "authorship_tag": "ABX9TyNKl6TOP7QynvskDIOArCjP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5106,7 +5106,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Print execution times\n",
+        "# Print execution times ---- referenced 2.3 -->Load in the Data and Perform Speed Test\n",
         "\n",
         "print(f\"polars Execution Time: {polars_time:.4f} seconds\")\n",
         "print(f\"Pandas Execution Time: {pandas_time:.4f} seconds\")"
